--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.appcompat_version = "1.0.0"
     ext.kotlin_version = '1.2.71'
+    ext.constraint_layout_version = "2.0.0-alpha2"
     repositories {
         google()
         jcenter()
