implement dagger, retrofit, reactiveX

--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,13 @@ buildscript {
     ext.appcompat_version = "1.0.0"
     ext.kotlin_version = '1.2.71'
     ext.constraint_layout_version = "2.0.0-alpha2"
+    ext.lifecycle_version = "2.0.0"
+    ext.dagger_version = "2.17"
+    ext.retrofit_version = "2.4.0"
+    ext.rxkotlin_version = "2.2.0"
+    ext.rxandroid_version = "2.0.2"
+    ext.okhttp_version = "3.10.0"
+
     repositories {
         google()
         jcenter()
