--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "pl.karolmichalski.tumblrphotos"
+        applicationId "pl.karolmichalski.githubrepos"
         minSdkVersion 17
         targetSdkVersion 28
         versionCode 1
@@ -46,7 +46,6 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-jackson:$retrofit_version"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
-
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
 
     //reactiveX
