--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".presentation.details.DetailsActivity" />
+
     </application>
 
 </manifest>
