implement storing keywords and repoList in onSaveInstanceState

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,9 @@ android {
             path "CMakeLists.txt"
         }
     }
+    androidExtensions {
+        experimental = true
+    }
 }
 
 dependencies {
