--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
     ext.rxkotlin_version = "2.2.0"
     ext.rxandroid_version = "2.0.2"
     ext.okhttp_version = "3.10.0"
+    ext.glide_version = "4.8.0"
 
     repositories {
         google()
